# SPDX-FileCopyrightText: © 2022 Decompals
# SPDX-License-Identifier: MIT

[metadata]
name = n64img
version = 0.1.0
author = Decompals
license = MIT
description = N64 image format library
url = https://github.com/decompals/n64img
project_urls =
    Source = https://github.com/decompals/n64img
    Bug Tracker = https://github.com/decompals/n64img/issues
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pypng